# scry2

./: .gitignore  Cargo.toml  README.md
crates/scry2/: Cargo.toml
crates/scry2-bench/: Cargo.toml
crates/scry2-bench/src/: backend.rs  be_mmap.rs  be_redb.rs  be_rocks.rs  main.rs  stats.rs  workload.rs
crates/scry2/examples/: bench_substr.rs
crates/scry2/src/: cache.rs  format.rs  kythe.rs  kzip.rs  lib.rs  main.rs  reader.rs  reply.rs  server.rs  writer.rs
crates/scry2/tests/: cli_flags.rs
crates/scry2/tests/fixtures/: java_sig_S.entries
docs/: AOSP.md  BENCH.md  DESIGN.md  DEVELOPMENT.md  INSTALL.md  KYTHE.md  LIMITS.md  USAGE.md  VS_KYTHE.md
scripts/: aosp-from-kzip.sh  install-aosp.sh
