[package]
name = "scry2"
version.workspace = true
edition.workspace = true

[[bin]]
name = "scry2"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
memmap2 = { workspace = true }
anyhow   = { workspace = true }
clap     = { workspace = true }
twox-hash = { workspace = true }

[dev-dependencies]
rand     = { workspace = true }
